--- a/templates/employees/add_employee.html
+++ b/templates/employees/add_employee.html
@@ -2,7 +2,8 @@
 
 {% block page_content %}
 <div class="container py-4">
-
+<script src="{{ url_for('static', filename='js/pin.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/emp.js') }}"></script>
     <div class="card glass-card p-4">
         <h3 class="mb-4 fw-bold">Add New Employee</h3>
 
